removed dublicated channels from index.html

--- a/slackbook_user/templates/base/browse-channel.html
+++ b/slackbook_user/templates/base/browse-channel.html
@@ -10,7 +10,7 @@
             {{ channel.created_on|timesince }}
             <br>
             <!-- this leads to channel(name!) with the right id -->
-            {% if channel.post_set.all|first %}
+            {% if channel.post_set.all %}
             <div class="channel-content">{{ channel.post_set.all|first }}</div>
             {% endif %}
             <a href="{% url 'member' channel.id %}"><i class="fas fa-user-friends"></i></a> {{ channel.guests.count }} Members
