--- a/slackbook_user/templates/base/browse-channel.html
+++ b/slackbook_user/templates/base/browse-channel.html
@@ -3,7 +3,7 @@
 
         <div class= "channel-content"><a class="col-md-8" href="{% url 'home' %}">Available Channels: </a><span class="col-md-4">{{ queryset.count }}</span></div>
         {% for channel in queryset %}
-        <div class="channel-content">
+        <div class="channel-content channel-scroll">
             <div><h5><a href="{% url 'channel' channel.id %} ">{{channel.title}}</a></h5></div>
             <a href="#"><span>@ <i class="fas fa-user"></i> {{ channel.host.username }}</span></a>
             <!-- host.user is a django function -->
