--- a/slackbook_user/templates/base/chat.html
+++ b/slackbook_user/templates/base/chat.html
@@ -35,13 +35,13 @@
                 </label>
                 <br>
                 <!-- {{ chat.body }} --> 
-                since {{ chat.created_on|timesince }}
+                connected since {{ chat.created_on|timesince }}
                 <hr>
                 {% endif %}
                 {% for post in posts %}
                 {% if post.chat %}
                     <div>
-                        <small><a href="#">@{{ post.user.username }}</a> - {{ post.created_on|timesince }} ago</small>
+                        <small><a href="{% url 'account' request.user.id %}">@{{ post.user.username }}</a> - {{ post.created_on|timesince }} ago</small>
                         <!-- <p>Comment: {{ post.body }}</p>
                         <br> -->
                         {% if post.image %}
@@ -53,7 +53,7 @@
                         {% if request.user == post.user%}
                             <!-- {{ post.id }} -->
                             <a href="{% url 'delete-comment' post.id %}"><button
-                                class="btn btn-outline-success button">X</button></a>
+                                class="btn btn-outline-success button delete-post">X</button></a>
                             <!-- <a  href="{% url 'delete-comment' post.id %}"><button class="btn btn-outline-success button">x</button></a> -->
                         {% endif %}
                         <hr>  
