--- a/slackbook_user/templates/base/channel-member.html
+++ b/slackbook_user/templates/base/channel-member.html
@@ -1,12 +1,21 @@
-<div class="row">
-    <div>
-        <h3>Who is there?</h3>
-        <hr>
-        {% for guest in guests %}
-            <div>
-                <!-- <h5>@{{ guest }}</h5> -->
-                <p>@{{ guest.username }}</p>
-            </div>
-        {% endfor %}
+{% extends 'base-nav.html' %}
+
+{% block content %}
+
+<div class="row main-content">
+    <div class="col-md-4 offset-md-4 channel-content">
+        <div>
+            <h3>Who is there?</h3>
+            <hr>
+            {% for guest in guests %}
+                <div>
+                    <!-- <h5>@{{ guest }}</h5> -->
+                    @ <a href="{% url 'account' guest.id %}">{{ guest.username }}</a>
+                    <br>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 </div>
+
+{% endblock %}
