--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,10 @@
         </div>
 
         
-        <div class="col-md-8 collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="row header2">
+        <div class="col-md-4 collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="row no-gutters header-small">
               <!-- <div class="col-md-6" > -->
-                <div class="col-md-6 btn-group account-image">
+                <div class="btn-group account-image">
                   <!-- <div class="btn-group col-lg-1"> -->
                       <button type="button" class="btn btn-primary dropdown-toggle btn-outline-success button" data-toggle="dropdown" aria-expanded="false">
                       <!-- <img src="/static/images/SlackBook-Logo.png" class="account-image" alt="account-image"> -->
@@ -72,21 +72,24 @@
                           <a class="dropdown-item" href="{% url 'user-settings' %}">Settings</a>
                         {% endif %}
                         <li class="nav-item">
-                          <a class="nav-link" href="#">All Channels</a>
+                          <a class="nav-link" href="{% url 'account' request.user.id %}">My Account</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">All Categories</a>
+                          <a class="nav-link" href="{% url 'topics' %}">Categories and Channels</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="{% url 'recently-active' %}">Active Users</a>
                         </li>
                       </div>
                     </div>
-              <div class="col-md-6">
-                <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="s">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-              </div>
         </div>
         </div>
+        <div class="col-md-4">
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="s">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+          </div>
         </div>
       </nav>
 <!-- -------------Content---------------- -->
