--- a/slackbook_user/templates/base/account.html
+++ b/slackbook_user/templates/base/account.html
@@ -21,11 +21,16 @@
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                           {% for conversation in chat %}
-                            {% if conversation.host == user %}
-                            <a class="dropdown-item" href="{% url 'chat' conversation.id %}">{{conversation}}</a>
+                          <!-- {{conversation.title}} -->
+                            {% if conversation.host == user or conversation.title == user.username %}
+                                {% if conversation.host == user %}
+                                    <a class="dropdown-item" href="{% url 'chat' conversation.id %}">{{conversation.title}}</a>
+                                {% else %}
+                                    <a class="dropdown-item" href="{% url 'chat' conversation.id %}">{{conversation.host}}</a>
+                                {% endif %}
                             {% else %}
                                 {% ifchanged You have no current conversation. %}
-                                    You have no current conversation.
+                                You have {{ forloop.counter0 }} current conversations.
                                 {% endifchanged %}                  
                             {% endif %}
                           {% endfor %}
@@ -36,7 +41,7 @@
                     <p>Get connected</p>
                     <div>
                         {% for converstation in chat|slice:"1" %}
-                        {% if converstation.title == request.user.username and user == converstation.host %}
+                        {% if converstation.title == request.user.username and user == converstation.host or converstation.title == user and request.user.username == converstation.host %}
                             <a href="{% url 'chat' converstation.id %}"><i class="fas fa-envelope"></i></a>
                             {{ break }}
                         {% else %}
@@ -72,20 +77,7 @@
                 <div class="col-6" style="margin-left: -10px;">
                     
                     
-                <!-- {% if request.user != user %}
-                    <h4>Send {{user.username }} a message</h4>
-                    <div>
-                        {% for converstation in chat|slice:"1" %}
-                        {% if converstation.title == request.user.username and user == converstation.host %}
-                            <a href="{% url 'chat' converstation.id %}"><i class="fas fa-envelope"></i></a>
-                            {{ break }}
-                        {% else %}
-                            {% include 'base/chat.html' %}
-                        {% endif %}
-                        {% endfor %}
-                    </div>
-
-                {% endif %} -->
+                
                   
                     <div>
                        
